2008-01-09  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* ParseXSDoc.pm (parse_file): When parsing an #else pre-processor
	directive, make sure we have actually seen and parsed a
	corresponding #if before trying to negate its entry.  This can
	happen when our parsing heurestics fail.  The result was an
	exception: "Modification of non-creatable array value attempted."

2008-01-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Stable release 1.163.

2008-01-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* GObject.xs (class_info_finish_loading): When handling a class'
	@ISA, instead of simple av_fetch calls and a final av_clear, use
	repeated av_shift calls.  Invoking av_clear on an @ISA array seems
	to break the caching magic associated with it when running under
	perl 5.10.0.  This in turn breaks our lazy-loading scheme.

2007-12-16  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* GBookmarkFile.xs: Hush compiler warning.

2007-11-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* GError.xs (gperl_gerror_from_sv): Fix the check for undefined
	domain keys in GError hashes.

	* GType.xs (add_interfaces): Fix the check for undefined interface
	names.

2007-11-15  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* Glib.exports: Add SvGKeyFile.  (Reported by spicy jack)

2007-11-10  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Stable release 1.162.

2007-10-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* AUTHORS
	* MakeHelper.pm (postamble_docs_full): When constructing the
	add_types call, make sure to properly quote the paths.  (Patch by
	Andres König)

2007-10-14  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Stable release 1.161.

2007-10-14  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* Makefile.PL: Use BEGIN { require 5.008; } instead of use 5.008;